--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,12 @@ jobs:
         relative_project_path: ./
         archive_output: true
 
-    #   # This release action has worked well for me. However, you can most likely use any release action of your choosing.
-    #   # https://github.com/ncipollo/release-action
-    # - name: create release
-    #   uses: ncipollo/release-action@v1.14.0
-    #   with:
-    #     token: ${{ secrets.GITHUB_TOKEN }}
-    #     generateReleaseNotes: true
-    #     tag: ${{ github.ref_name }}
-    #     artifacts: ${{ steps.export.outputs.archive_directory }}/*
+      # This release action has worked well for me. However, you can most likely use any release action of your choosing.
+      # https://github.com/ncipollo/release-action
+    - name: create release
+      uses: ncipollo/release-action@v1.14.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        generateReleaseNotes: true
+        tag: ${{ github.ref_name }}
+        artifacts: ${{ steps.export.outputs.archive_directory }}/*
